--- a/es6-提案/package.json
+++ b/es6-提案/package.json
@@ -7,7 +7,11 @@
     "estype": "babel --plugins transform-es2015-arrow-functions test.js -o build.js"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.26.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1"
   }
 }
