--- a/es6-提案/.babelrc
+++ b/es6-提案/.babelrc
@@ -1,3 +1,4 @@
 {
-	"presets": ["stage-1", "stage-0"]
+	"presets": ["stage-2", "stage-1", "stage-0"],
+	"plugins": ["@babel/plugin-proposal-throw-expressions"]
 }
